--- a/index.html
+++ b/index.html
@@ -45,12 +45,60 @@
     <li><a href="#gallery">Gallery</a></li>
     <li><a href="#contact">Contact</a></li>
   </ul>
+
+  <!-- Section: Slider -->
+  <section class="slider">
+    <ul class="slides">
+      <li>
+        <img src="./img/resort1.jpg" alt="Resort1">
+        <div class="caption center-align">
+          <h2>Take Your Dream Vacation</h2>
+          <h5 class="light grey-text text-lighten-3 hide-on-small-only">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis, exercitationem illum obcaecati repellendus sequi!
+          </h5>
+          <a href="#" class="btn btn-large">Learn More</a>
+        </div>
+      </li>
+      <li>
+        <img src="./img/resort2.jpg" alt="Resort2">
+        <div class="caption left-align">
+          <h2>We Work With All Budgets</h2>
+          <h5 class="light grey-text text-lighten-3 hide-on-small-only">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis, exercitationem illum obcaecati repellendus sequi!
+          </h5>
+          <a href="#" class="btn btn-large">Learn More</a>
+        </div>
+      </li>
+      <li>
+        <img src="./img/resort3.jpg" alt="Resort3">
+        <div class="caption right-align">
+          <h2>Group & Individual Getaways</h2>
+          <h5 class="light grey-text text-lighten-3 hide-on-small-only">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet debitis, exercitationem illum obcaecati repellendus sequi!
+          </h5>
+          <a href="#" class="btn btn-large">Learn More</a>
+        </div>
+      </li>
+
+
+    </ul>
+  </section>
+
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
   <script>
     $(document).ready(function () {
+      // Init Side Nav
       $('.button-collapse').sideNav();
+
+      // Init Slider
+      $('.slider').slider({
+          indicators: false,
+          height: 500,
+          transaction: 500,
+          interval: 6000
+      });
     });
   </script>
 </body>
