--- a/index.html
+++ b/index.html
@@ -79,10 +79,29 @@
           <a href="#" class="btn btn-large">Learn More</a>
         </div>
       </li>
-
-
     </ul>
   </section>
+
+  <!-- Section: Search -->
+  <section class="section section-search teal darken-1 white-text center">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <h3>Search Destinations</h3>
+          <div class="input-field">
+            <input
+                type="text"
+                class="white autocomplete grey-text"
+                placeholder="Aruba, Cancun, etc..."
+                id="autocomplete-input"
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
 
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
@@ -98,6 +117,20 @@
           height: 500,
           transaction: 500,
           interval: 6000
+      });
+
+      // Autocomplete
+      $('.autocomplete').autocomplete({
+          data: {
+              "Aruba": null,
+              "Cancun Mexico": null,
+              "Hawaii": null,
+              "Florida": null,
+              "California": null,
+              "Jamaica": null,
+              "Europe": null,
+              "The Bahamas": null,
+          }
       });
     });
   </script>
