--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="navbar-fixed">
-    <nav class="deep-orange accent-3">
+    <nav class="deep-orange accent-2">
       <div class="container">
         <div class="nav-wrapper">
            <a href="#home" class="logo-img">
@@ -83,7 +83,7 @@
   </section>
 
   <!-- Section: Search -->
-  <section class="section section-search teal darken-1 white-text center">
+  <section class="section section-search deep-orange accent-2 white-text center">
     <div class="container">
       <div class="row">
         <div class="col s12">
@@ -101,7 +101,34 @@
     </div>
   </section>
 
-
+  <!-- Section: Icon Boxes -->
+  <section class="section section-icons grey lighten-4 center">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="card-panel">
+            <i class="material-icons large teal-text">room</i>
+            <h4>Pick Where</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, veritatis?</p>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card-panel">
+            <i class="material-icons large teal-text">store</i>
+            <h4>Travel Shop</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, veritatis?</p>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card-panel">
+            <i class="material-icons large teal-text">airplanemode_active</i>
+            <h4>Fly Cheap</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, veritatis?</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
