--- a/index.html
+++ b/index.html
@@ -130,6 +130,55 @@
     </div>
   </section>
 
+  <!-- Section: Popular -->
+  <section class="section section-popular">
+    <div class="container">
+      <div class="row">
+        <h4 class="center"><span class="teal-text">Popular</span> Places</h4>
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="./img/resort1.jpg" alt="Resort1">
+              <div class="card-title">Cancun, Mexico</div>
+            </div>
+            <div class="card-content">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi dolor impedit in itaque modi saepe?</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="./img/resort2.jpg" alt="Resort2">
+              <div class="card-title">The Bahamas</div>
+            </div>
+            <div class="card-content">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi dolor impedit in itaque modi saepe?</p>
+            </div>
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card">
+            <div class="card-image">
+              <img src="./img/resort3.jpg" alt="Resort3">
+              <div class="card-title">Nova Scotia</div>
+            </div>
+            <div class="card-content">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi dolor impedit in itaque modi saepe?</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s12 center">
+          <a href="#contact" class="btn btn-large grey darken-3">
+            <i class="material-icons left">send</i> Contact for Booking
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script type="text/javascript" src="js/materialize.min.js"></script>
