--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
   <section class="section section-popular">
     <div class="container">
       <div class="row">
-        <h4 class="center"><span class="teal-text">Popular</span> Places</h4>
+        <h4 class="center"><span class="deep-orange-text">Popular</span> Places</h4>
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
@@ -206,6 +206,104 @@
     </div>
   </section>
 
+  <!-- Section: Gallery -->
+  <section class="section section-gallery">
+    <div class="container">
+        <h4 class="center">
+            <span class="deep-orange-text">Photo</span> Gallery
+        </h4>
+        <div class="row">
+            <div class="col s12 m3">
+                <img
+                    src="https://source.unsplash.com/1600x900/?beach"
+                    alt="Beach"
+                    class="materialboxed responsive-img"
+                >
+            </div>
+            <div class="col s12 m3">
+                <img
+                    src="https://source.unsplash.com/1600x900/?travel"
+                    alt="travel"
+                    class="materialboxed responsive-img"
+                >
+            </div>
+            <div class="col s12 m3">
+                <img
+                    src="https://source.unsplash.com/1600x900/?nature"
+                    alt="Beach"
+                    class="materialboxed responsive-img"
+                >
+            </div>
+            <div class="col s12 m3">
+                <img
+                    src="https://source.unsplash.com/1600x900/?beach,travel"
+                    alt="Beach"
+                    class="materialboxed responsive-img"
+                >
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12 m3">
+                <img
+                    src="https://source.unsplash.com/1600x900/?beaches"
+                    alt="Beach"
+                    class="materialboxed responsive-img"
+                >
+            </div>
+            <div class="col s12 m3">
+                <img
+                    src="https://source.unsplash.com/1600x900/?traveling"
+                    alt="travel"
+                    class="materialboxed responsive-img"
+                >
+            </div>
+            <div class="col s12 m3">
+                <img
+                    src="https://source.unsplash.com/1600x900/?bridge"
+                    alt="Beach"
+                    class="materialboxed responsive-img"
+                >
+            </div>
+            <div class="col s12 m3">
+                <img
+                    src="https://source.unsplash.com/1600x900/?boat,travel"
+                    alt="Beach"
+                    class="materialboxed responsive-img"
+                >
+            </div>
+        </div>
+        <div class="row">
+            <div class="col s12 m3">
+                <img
+                    src="https://source.unsplash.com/1600x900/?water"
+                    alt="Beach"
+                    class="materialboxed responsive-img"
+                >
+            </div>
+            <div class="col s12 m3">
+                <img
+                    src="https://source.unsplash.com/1600x900/?building"
+                    alt="travel"
+                    class="materialboxed responsive-img"
+                >
+            </div>
+            <div class="col s12 m3">
+                <img
+                    src="https://source.unsplash.com/1600x900/?trees"
+                    alt="Beach"
+                    class="materialboxed responsive-img"
+                >
+            </div>
+            <div class="col s12 m3">
+                <img
+                    src="https://source.unsplash.com/1600x900/?cruise"
+                    alt="Beach"
+                    class="materialboxed responsive-img"
+                >
+            </div>
+        </div>
+    </div>
+  </section>
 
   <!--Import jQuery before materialize.js-->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
