--- a/index.html
+++ b/index.html
@@ -350,6 +350,10 @@
        </div>
    </section>
 
+  <!-- Footer -->
+  <footer class="section deep-orange accent-2 white-text center">
+      <p class="flow-text">Travelvile &copy; 2019 </p>
+  </footer>
 
   <!-- Import jQuery before materialize.js -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
